# ToolFrameworkCore

./: .gitignore  CMakeLists.txt  README.md
cmake/: ToolFrameworkDependencies.cmake  toolchain-arm-linux-gnueabihf.cmake
src/: main.cpp
